ponderada-semana1/src/log/build_2024-05-05_18-59-02/ola_mundo/stderr.log
  File "/home/gabriellemitoso/modulo6-engcomp/ponderada-semana1/src/install/ola_mundo/lib/python3.10/site-packages/ola_mundo/ola.py", line 133
    ``
    ^
SyntaxError: invalid syntax

